*** Changelog ***

= 1.2.0 - 20-10-2022 =
* Payment flow triggered on button click rather than checkout submit to improve stability
* Place order button disabled during flow to prevent multiple payment flows being created
* Only creates WC order if payment flow was completed successfully
* Added option: ajax client side error and info logging
* Updated icon and banner

= 1.1.2 - 26-07-2022 =
* Fixed text typos
* Fixed critical error if WooCommerce isn't active

= 1.1.1 - 15-07-2022 =
* Replaced CURL requests with WP HTTP API
* Post input sanitization
* Corrected readme.txt information
* Removed some surplus code (re-use GC customer functionality)

= 1.1.0 - 13-07-2022 =
* Added server side required checkout field validation
* Changed display name and slug

= 1.0.1 - 11-07-2022 =
* Added additional Woocommerce errors for incorrectly setup GC accounts

= 1.0.0 - 08-05-2022 =
* First Release